<resources>
    <string name="app_name">Books Store</string>
    <string name="main_emptydata_subtitle">Start adding a book.</string>
    <string name="main_emptydata_title">There are no books in the store.</string>
    <string name="editor_overview">Details</string>
    <string name="editor_book_name">Book Name</string>
    <string name="editor_book_price">Price</string>
    <string name="editor_book_quantity">Quantity</string>
    <string name="editor_supplier">Supplier</string>
    <string name="editor_currency">$</string>
    <string name="menu_editor_save">Save</string>
    <string name="menu_editor_delete">Delete</string>
    <string name="menu_main_delete_all_books">Delete all books</string>
    <string name="menu_main_insert_dummy_data">Insert dummy data</string>
    <string name="editor_add_book">Add a Book</string>
    <string name="editor_edit_book">Edit Book</string>
    <string name="editor_book_saved">Book saved</string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_update_book_failed">Error with updating book</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_empty_name">The name of the book can\'t be empty</string>
    <string name="editor_invalid_price">You must insert a valid price</string>
    <string name="editor_invalid_suppName">You must insert a valid supplier name</string>
    <string name="editor_invalid_suppPhone">You must insert a valid supplier phone</string>
    <string name="editor_supplier_name">Name</string>
    <string name="editor_supplier_phone_number">Phone Number</string>
    <string name="editor_call_the_supplier">Call the Supplier</string>
    <string name="edit_toast_emptyFields">Set all the fields to save the new book</string>
    <string name="pieces_abbr">pcs</string>
    <string name="main_book_sold">The book has been sold</string>
    <string name="main_zero_books">There are no more available books</string>
    <string name="item_sale">Sale</string>
</resources>
