<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/editor_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_name"
                android:hint="@string/editor_book_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="4dp"
                android:paddingStart="4dp">

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_book_price"
                    android:hint="@string/editor_book_price"
                    android:inputType="numberDecimal"
                    style="@style/EditorFieldStyle" />

                <!-- Currency -->
                <TextView
                    android:id="@+id/label_currency"
                    android:text="@string/editor_currency"
                    style="@style/EditorCurrencyyStyle"/>
            </RelativeLayout>

            <!-- Qta field -->
            <TextView
                android:text="@string/editor_book_quantity"
                style="@style/EditorFieldStyle"
                android:layout_marginTop="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    style="@style/QuantityPickerButtonStyle"
                    android:onClick="decrementQta"
                    android:text="-" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Button
                    style="@style/QuantityPickerButtonStyle"
                    android:onClick="incrementQta"
                    android:text="+" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


    <!-- Supplier category -->
    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <!-- Label -->
        <TextView
            android:text="@string/editor_supplier"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:orientation="vertical">

            <!-- Supplier Name field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/editor_supplier_name"
                android:inputType="text"
                style="@style/EditorFieldStyle" />

            <!-- Supplier Phone field -->
            <EditText
                android:id="@+id/edit_supplier_phone"
                android:hint="@string/editor_supplier_phone_number"
                android:inputType="phone"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_marginTop="30dp"
        android:text="@string/editor_call_the_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="callSupplier"/>
</LinearLayout>